--- a/build.xml
+++ b/build.xml
@@ -1,36 +1,63 @@
-<project name="a1" default="compile" basedir=".">
-    <description>
-           a1
-               </description>
-                 <!-- set global properties for this build -->
+<project name="CSE 454 Location Extractor" default="compile" basedir=".">
+  <description>
+    Program that extracts location information from documents in a
+    corpus.
+  </description>
+
+  <!-- set global properties for this build -->
   <property name="src" location="src"/>
-    <property name="lib" location="lib"/>
-      <property name="data" location="data"/>
-        <property name="build" location="bin"/>
-          
-  
+  <property name="lib" location="lib"/>
+  <property name="data" location="data"/>
+  <property name="build" location="bin"/>
+
   <target name="init">
-      <!-- Create the time stamp -->
+    <!-- Create the time stamp -->
     <!-- Create the build directory structure used by compile -->
     <mkdir dir="${build}"/>
-      </target>
+  </target>
 
-  <target name="compile" depends="init"
-          description="compile the source " >
-              <!-- Compile the java code from ${src} into ${build} -->
+  <target name="compile"
+          depends="init"
+          description="Compile the source code.">
+    <!-- Compile the java code from ${src} into ${build} -->
     <javac includeantruntime="false" debug="on" nowarn="on" srcdir="${src}" classpath="bin" destdir="${build}">
-         	   
     </javac>
-      </target>
-      	<target name="compress" description="Compression target" depends="compile">
-      		        <jar jarfile="a1.jar" basedir="bin" />
-      		        <jar jarfile="a1-src.jar" basedir="src" />
-      		        			  </target>
-      		        			    
+  </target>
+
+  <target name="launch"
+          depends="compile"
+          description="Launches the extractor.">
+    <!-- Compile the java code from ${src} into ${build} -->
+    <java classpath="bin"
+          classname="Assignment1"
+          fork="true">
+      <arg value="${action}" />
+    </java>
+  </target>
+
+  <target name="run">
+    <antcall target="launch">
+      <param name="action" value="run" />
+    </antcall>
+  </target>
+
+  <target name="eval">
+    <antcall target="launch">
+      <param name="action" value="eval" />
+    </antcall>
+  </target>
+
+  <target name="compress"
+          description="Compress the source and binary files into JARs for distribution."
+          depends="compile">
+    <jar jarfile="a1.jar" basedir="bin" />
+    <jar jarfile="a1-src.jar" basedir="src" />
+  </target>
+
   <target name="clean"
           description="clean up" >
-              <!-- Delete the ${build} and ${dist} directory trees -->
+    <!-- Delete the ${build} and ${dist} directory trees -->
     <delete dir="${build}"/>
-      </target>
-      </project>
+  </target>
+</project>
 
